--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "postcss": "^8.4.6",
     "postcss-cli": "^9.1.0",
     "tailwindcss": "^3.0.17",
+    "tailwindcss-textshadow": "^2.1.3",
     "watch": "^0.13.0"
   },
   "dependencies": {
