--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "postcss-cli": "^9.1.0",
     "tailwindcss": "^3.0.17",
     "tailwindcss-textshadow": "^2.1.3",
-    "watch": "^1.0.2"
+    "watch": "^1.0.2",
+    "yarn-audit-fix": "^9.0.10"
   },
   "dependencies": {
     "yarn": "^1.22.17"
