--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
-  "name": "Start on Heroku: PHP",
-  "description": "A barebones PHP app that makes use of the Silex web framework",
-  "repository": "https://github.com/heroku/php-getting-started",
+  "name": "Heroku PHP Jelly Stack",
+  "description": "A barebones PHP app on Heroku",
+  "repository": "https://github.com/fuelviews/heroku-phpjelly",
   "addons": []
 }
