--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "build": "postcss ./public/css/tailwind.css -o ./public/css/styles.css",
     "watch": "watch 'yarn run build' ./public & docker-compose up",
-    "images": "cd ./public/images/src; ./img-magic.sh; cd ../../..",
+    "images": "cp ./img-magic.sh ./public/images/src; cd ./public/images/src; ./img-magic.sh; rm ./img-magic.sh; cd ../../..",
     "sitemap": "yarn sitemap-generator -f ./public/sitemap.xml https://bananas.one & generate-robot -r"
   },
   "repository": {
