--- a/public/.htaccess
+++ b/public/.htaccess
@@ -1,3 +1,8 @@
+<IfModule mod_headers.c>
+Header set Content-Security-Policy: "default-src 'self' data: 'unsafe-inline' googletagmanager.com *.googletagmanager.com analytics.google.com google-analytics.com *.google-analytics.com stats.g.doubeclick.net doubleclick.net formspree.io"
+</IfModule>
+
+
 <IfModule mod_rewrite.c>
 RewriteCond %{HTTPS} !=on
 RewriteCond %{HTTP:X-Forwarded-Proto} !https 
