Push sec headers (#7)

--- a/public/.htaccess
+++ b/public/.htaccess
@@ -1,5 +1,9 @@
 <IfModule mod_headers.c>
 Header set Content-Security-Policy: "default-src 'self' data: 'unsafe-inline' googletagmanager.com *.googletagmanager.com analytics.google.com google-analytics.com *.google-analytics.com stats.g.doubeclick.net doubleclick.net formspree.io"
+Header set Strict-Transport-Security: "max-age=31536000; includeSubDomains"
+Header set X-Content-Type-Options: "nosniff"
+Header set X-Frame-Options: "SAMEORIGIN"
+Header set X-XSS-Protection "1; mode=block"
 </IfModule>
 
 
