--- a/package.json
+++ b/package.json
@@ -1,23 +1,22 @@
 {
-  "name": "heroku-phpjelly",
+  "name": "phpjelly",
   "version": "1.0.0",
   "description": "Heroku PHP Jelly Stack",
   "scripts": {
-    "build": "postcss ./public/css/tailwind.css -o ./public/css/styles.css",
-    "watch": "watch 'yarn run build' ./public & docker-compose up",
-    "images": "cp ./img-magic.sh ./public/images/src; cd ./public/images/src; ./img-magic.sh; rm ./img-magic.sh; cd ../../..",
-    "sitemap": "yarn sitemap-generator -f ./public/sitemap.xml https://bananas.one & generate-robot -r"
+    "build": "postcss ./public/css/tailwind.css -o ./public/css/styles.css --verbose",
+    "watch": "watch 'yarn run build' ./public & docker-compose up -d & yarn generate-robot -r & yarn sitemap-generator -f ./public/sitemap.xml https://bananas.one &> /dev/null",
+    "images": "cp ./img-magic.sh ./public/images/src; cd ./public/images/src; ./img-magic.sh; rm ./img-magic.sh; cd ../../.."
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/fuelviews/heroku-phpjelly.git"
+    "url": "git+https://github.com/fuelviews/phpjelly.git"
   },
   "author": "@SkyJebus",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/fuelviews/heroku-phpjelly/issues"
+    "url": "https://github.com/fuelviews/phpjelly/issues"
   },
-  "homepage": "https://github.com/fuelviews/heroku-phpjelly#readme",
+  "homepage": "https://github.com/fuelviews/phpjelly#readme",
   "devDependencies": {
     "@fullhuman/postcss-purgecss": "^4.1.3",
     "@tailwindcss/aspect-ratio": "^0.4.0",
