--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "images": "yarn gulp img",
     "favicon": "npx favicons-compiled-cli -i ./images/favicon/favicon.png -c favicon.config.js -o public/favicon/",
     "sitemap": "yarn generate-robot -r & yarn sitemap-generator -f ./public/sitemap.xml https://heroku-phpjelly.herokuapp.com/",
-    "prod": "yarn images & yarn favicon & yarn sitemap & yarn run build"
+    "prod": "yarn gulp img; yarn favicon; yarn sitemap;"
   },
   "repository": {
     "type": "git",
