--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "build": "postcss ./public/css/tailwind.css -o ./public/css/styles.css --verbose",
     "watch": "watch 'yarn run build' ./public & docker-compose --log-level ERROR up",
     "images": "yarn gulp img",
+    "prettier": "npx prettier ./public/ --write",
     "favicon": "npx favicons-compiled-cli -i ./images/favicon/favicon.png -c favicon.config.js -o public/favicon/",
     "sitemap": "yarn generate-robot -r & yarn sitemap-generator -f ./public/sitemap.xml https://heroku-phpjelly.herokuapp.com/",
     "prod": "yarn images & yarn favicon & yarn sitemap & yarn build"
@@ -22,26 +23,27 @@
   "homepage": "https://github.com/fuelviews/phpjelly#readme",
   "devDependencies": {
     "@fullhuman/postcss-purgecss": "^4.1.3",
+    "@prettier/plugin-php": "^0.18.0",
+    "@ruhith/generate-robots-text": "^1.0.1",
     "@tailwindcss/aspect-ratio": "^0.4.0",
     "@tailwindcss/forms": "^0.4.0",
     "@tailwindcss/typography": "^0.5.0",
     "autoprefixer": "^10.2.6",
     "cssnano": "^5.0.5",
-    "postcss": "^8.4.6",
-    "postcss-cli": "^9.1.0",
-    "tailwindcss": "^3.0.17",
-    "tailwindcss-textshadow": "^2.1.3",
-    "watch": "^1.0.2",
-    "yarn-audit-fix": "^9.0.10"
-  },
-  "dependencies": {
-    "@ruhith/generate-robots-text": "^1.0.1",
     "favicons-compiled": "^0.0.1",
     "gulp": "^4.0.2",
     "gulp-rename": "^2.0.0",
     "gulp-sharp-responsive": "^0.3.0",
+    "postcss": "^8.4.6",
+    "postcss-cli": "^9.1.0",
+    "prettier": "^2.5.1",
+    "prettier-plugin-tailwindcss": "^0.1.7",
     "sharp": "^0.30.0",
     "sitemap-generator-cli": "^7.5.0",
-    "yarn": "^1.22.17"
+    "tailwindcss": "^3.0.17",
+    "tailwindcss-textshadow": "^2.1.3",
+    "watch": "^1.0.2",
+    "yarn": "^1.22.17",
+    "yarn-audit-fix": "^9.0.10"
   }
 }
