--- a/public/favicon/manifest.json
+++ b/public/favicon/manifest.json
@@ -1,12 +1,12 @@
 {
   "name": "phpjelly",
   "short_name": "phpjelly",
-  "description": "test phpjelly build",
+  "description": "phpjelly",
   "dir": "auto",
   "lang": "en-US",
   "display": "standalone",
   "orientation": "any",
-  "start_url": "/?homescreen=1",
+  "start_url": "/",
   "background_color": "#171717",
   "theme_color": "#171717",
   "icons": [
