--- a/public/.htaccess
+++ b/public/.htaccess
@@ -8,9 +8,10 @@ Header always edit Set-Cookie (.*) "$1; SameSite=strict"
 </IfModule>
 
 <IfModule mod_rewrite.c>
-RewriteCond %{HTTPS} !=on
-RewriteCond %{HTTP:X-Forwarded-Proto} !https 
-RewriteRule ^ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
+RewriteCond %{HTTP_HOST} !^www\. [NC,OR]
+RewriteCond %{HTTPS} !on
+RewriteCond %{HTTP_HOST} ^(?:www\.)?(.+)$ [NC]
+RewriteRule ^ https://www.%1%{REQUEST_URI} [R=301,L,NE]
 </IfModule>
 
 <IfModule mod_rewrite.c>
