--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
   "description": "PHP Jelly Stack",
   "scripts": {
     "build": "postcss ./public/css/tailwind.css -o ./public/css/styles.css --verbose",
-    "watch": "watch 'yarn run build' ./public & docker-compose --log-level ERROR up & yarn prettier",
+    "watch": "watch 'yarn run build' ./public & docker-compose --log-level ERROR up",
     "images": "yarn gulp img",
     "favicon": "npx favicons-compiled-cli -i ./images/favicon/favicon.png -c favicon.config.js -o public/favicon/",
     "sitemap": "yarn generate-robot -r & yarn sitemap-generator -f ./public/sitemap.xml https://phpjelly.com/",
     "prettier": "npx prettier ./public/ --write",
-    "prod": "yarn images & yarn favicon & yarn sitemap & yarn build & yarn prettier"
+    "prod": "yarn images & yarn favicon & yarn sitemap & yarn build & yarn prettier & exit"
   },
   "repository": {
     "type": "git",
