--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "autoprefixer": "^10.2.6",
     "cssnano": "^5.0.5",
     "favicons-compiled": "^0.0.3",
+    "favicons-compiled-cli": "^0.0.3",
     "generate-robotstxt": "^8.0.3",
     "gulp": "^4.0.2",
     "gulp-rename": "^2.0.0",
@@ -45,8 +46,5 @@
     "tailwindcss-textshadow": "^2.1.3",
     "watch": "^1.0.2",
     "yarn-audit-fix": "^9.0.10"
-  },
-  "dependencies": {
-    "favicons-compiled-cli": "^0.0.3"
   }
 }
