--- a/package.json
+++ b/package.json
@@ -1,15 +1,14 @@
 {
   "name": "phpjelly",
-  "version": "1.0.0",
-  "description": "PHP Jelly Stack",
+  "version": "1.0.3",
+  "description": "PHP Jelly",
   "scripts": {
     "build": "postcss ./public/css/tailwind.css -o ./public/css/styles.css --verbose",
     "watch": "watch 'yarn run build' ./public & docker-compose --log-level ERROR up",
     "images": "yarn gulp img",
     "favicon": "npx favicons-compiled-cli -i ./images/favicon/favicon.png -c favicon.config.js -o public/favicon/",
-    "sitemap": "yarn generate-robot -r & yarn sitemap-generator -f ./public/sitemap.xml https://phpjelly.com/",
-    "prettier": "npx prettier ./public/ --write",
-    "prod": "yarn images & yarn favicon & yarn sitemap & yarn build & yarn prettier & exit"
+    "sitemap": "yarn sitemap-generator -f ./public/sitemap.xml https://phpjelly.com/",
+    "prettier": "npx prettier ./public/ --write"
   },
   "repository": {
     "type": "git",
@@ -24,17 +23,13 @@
   "devDependencies": {
     "@fullhuman/postcss-purgecss": "^4.1.3",
     "@prettier/plugin-php": "^0.18.0",
-    "@ruhith/generate-robots-text": "^1.0.1",
     "@tailwindcss/aspect-ratio": "^0.4.0",
     "@tailwindcss/forms": "^0.5.0",
     "@tailwindcss/typography": "^0.5.0",
     "autoprefixer": "^10.2.6",
     "cssnano": "^5.0.5",
-    "favicons-compiled": "^0.0.3",
     "favicons-compiled-cli": "^0.0.3",
-    "generate-robotstxt": "^8.0.3",
     "gulp": "^4.0.2",
-    "gulp-rename": "^2.0.0",
     "gulp-sharp-responsive": "^0.3.0",
     "postcss": "^8.4.6",
     "postcss-cli": "^9.1.0",
